--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -109,10 +109,13 @@ footer {
   color: #fff;
   text-align: center;
   padding: 10px 0;
-  width: 100%;
-  position: fixed;
-  bottom: 0;
+  height: 50px;
 }
+
+.profile-body {
+  height: 70vh;
+}
+
 
 footer p {
   margin: 0;
@@ -124,11 +127,26 @@ footer p {
 
 
 body {
-  font-family: Arial, sans-serif;
-  background-color: #e5dac6;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   margin: 0;
   padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #e5dac6;
 }
+
+
+body::after {
+  content: '';
+  display: block;
+  height: 50px;
+  /* Set same as footer's height */}
+
+body, html {
+  height: 100%;
+}
+
 
 
 .container {
@@ -138,6 +156,8 @@ body {
   background-color: #fff;
   border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  flex-grow: 1;
+  min-height: calc(100vh - 150px); /* Adjust based on header and footer height */
 }
 
 h1 {
